@@ -1,6 +1,10 @@
 Version 1.3.0 - xx xxx 2008
+
   * Converted the http client model to allow for parallel
     search requests. Ticket #73.
+
+  * Add RetsSession::MODE_NO_SSL_VERIFY to disable SSL
+    verification. Ticket #87.
 
 Version 1.2.5 - 26 Nov 2008
 
